Added responsive grid gallery

--- a/gridPractice.html
+++ b/gridPractice.html
@@ -31,6 +31,17 @@
 <footer class="footer">Footer</footer>
 </div>
 </section>
+<section>
+<h2>Пример 3: Адаптивная галерея</h2>
+<div class="gallery"><div class="gallery-item"></div>
+<div class="gallery-item">Фото1</div>
+<div class="gallery-item">Фото2</div>
+<div class="gallery-item">Фото3</div>
+<div class="gallery-item">Фото4</div>
+<div class="gallery-item">ФОто5</div>
+<div class="gallery-item">Фото6</div>
+</div>
+</section>
     
 </body>
 </html>
